<resources>
    <string name="app_name">Sub Ur Meme</string>
    <string name="texto_botao_entrar">entrar</string>
    <string name="texto_botao_registrar">registrar</string>
    <string name="texto_botao_fazer_login">fazer login</string>
    <string name="hint_usuario">E-mail / Usuário</string>
    <string name="hint_senha">Senha</string>
    <string name="texto_mensagem_erro_usuario_invalido">Usuário inválido</string>
    <string name="texto_mensagem_erro_senha_invalida">Senha inválida</string>
    <string name="titulo_menu_descontrair">Descontrair</string>
    <string name="titulo_a_ser_criado">TODO</string>
    <string name="titulo_menu_entrar">Entrar</string>
    <string name="hint_texto_superior">Texto superior</string>
    <string name="hint_texto_inferior">Texto inferior</string>
    <string name="texto_botao_legendar_meme">Legendar meme</string>
    <string name="texto_botao_voltar">Voltar</string>
    <string name="texto_botao_compartilhar">Compartilhar</string>
    <string name="texto_botao_favoritar">Favoritar</string>
    <string name="texto_meme_legendado_com_sucesso">Meme legendado com sucesso!</string>
    <string name="titulo_menu_favoritos">Favoritos</string>
    <string name="texto_botao_concluido">Concluído</string>
    <string name="texto_botao_desfavoritar">Desfavoritar</string>
    <string name="titulo_menu_procurar">Procurar</string>
    <string name="titulo_menu_templates">Templates</string>
    <string name="texto_legendar_meme">Legendar Meme</string>
</resources>