<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.entrar.fragments.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usuario_textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:helperText="E-mail ou nome de usuário da sua conta imgflip"
        app:helperTextTextColor="@color/cor_secundaria_variante"
        app:layout_constraintBottom_toTopOf="@id/senha_textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:startIconDrawable="@drawable/ic_usuario_dinamico">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usuario_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_usuario"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress|text"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/senha_textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:endIconMode="password_toggle"
        app:helperText="Senha da sua conta imgflip"
        app:helperTextTextColor="@color/cor_secundaria_variante"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:startIconDrawable="@drawable/ic_cadeado_dinamico">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/senha_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_senha"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_materialButton"
        style="@style/botao_padrao"
        android:backgroundTint="@color/cor_primaria"
        android:text="@string/texto_botao_fazer_login"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/senha_textInputLayout"
        app:layout_constraintVertical_bias="0.35" />

</androidx.constraintlayout.widget.ConstraintLayout>